<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_print"
        android:title="@string/action_print"
        android:icon="@android:drawable/ic_menu_printer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/export_share_text"
                android:title="@string/export_share_text" />
            <item
                android:id="@+id/export_html"
                android:title="@string/export_html" />
        </menu>
    </item>

</menu>
